--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Functions and data for ryzom sheet files",
     "keywords": ["ryzom"],
     "homepage": "http://bmsite.net",
-    "license": "LGPL",
+    "license": "LGPL-3.0-or-later",
     "authors": [
         {
             "name": "Meelis Mägi",
